--- a/Css/Sass/layout.sass
+++ b/Css/Sass/layout.sass
@@ -33,3 +33,23 @@ div.cr-inline
 	display: inline-block
 	margin-left: 0.2rem
 	margin-right: 0.2rem
+
+.cr.container
+	max-width: 90%
+	height: 100%
+	margin-left: 20px
+	padding-right: 35px
+	padding-left: 35px
+	padding-top: 10px
+	padding-bottom: 10px
+
+	@media screen and(max-width: 850px)
+		float: none 
+		max-width: 90%
+		margin-left: 0px
+		margin-right: 20px
+		padding-right: 35px
+		padding-left: 35px
+		padding-top: 10px
+		padding-bottom: 10px
+
