--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -1,11 +1,18 @@
 //Colors from Material Design Guide Line
 
+$primary: #2196F3
+$accent: #E91E63
+$secondary: #1976D2
+
+
+
 $white: #fff
 $black: #000
 $gray: #9E9E9E
 $yellow: #FFEB3B
 $blue: #2196F3
 $gold: #e5c100
+$gold-deep: #998100
 $light-blue: #03A9F4
 $red: #F44336
 $red-1: #B71C1C
@@ -19,4 +26,12 @@ $indigo: #3F51B5
 $deep-purple: #673AB7
 $pink: #E91E63
 $purple: #9C27B0 
+
+
+//Buttons
+$button-small-size: 20px
+$button-medium-size: 140px
+$button-large-size: 220px
+$button-big-height: 3.0rem 
+
 
