Los botones fueron modificados para que reaccionen mejor a los click del usuario, asi como se mejoro los colores que utiliza, corregido algunos bugs en los mismos botones que no mostraban sus transiciones correctamente. Agregado archivos sass de los demas componentes

--- a/Css/Sass/main.sass
+++ b/Css/Sass/main.sass
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700')
 @import 'cards'
+@import 'inputs'
+@import 'chips'
+@import 'modals'
+@import 'menubar'
+@import 'transitions'
+@import 'dropdowns'
+@import 'checkbox'
 @import 'layout' 
 @import 'buttons'
