--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -11,8 +11,8 @@ $black: #000
 $gray: #9E9E9E
 $yellow: #FFEB3B
 $blue: #2196F3
-$gold: #e5c100
-$gold-deep: #998100
+$gold: #bf9b30
+$gold-deep: #a67c00
 $light-blue: #03A9F4
 $red: #F44336
 $red-1: #B71C1C
