--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -1,5 +1,8 @@
 @import 'variables'
 /*-----------------------------------All  BUTTONS CODE----------------------------------------------------------*/
+button.cr.button
+	outline: none 
+	border: none
 
 .cr.button
 	background: #F5F5F5
@@ -20,12 +23,10 @@
 	height: 2.2rem
 
 .cr.button.plain
-	border-radius: none
+	border-radius: 0px
 
 .cr.button
 	transition: all 0.3s ease 0s
-	&:hover 
-		background: rgba(0,0,0,0.1)
 	&:active
 		background: rgba(0,0,0,0.2)
 
@@ -157,7 +158,7 @@
 	color: $blue
 	&:hover 
 		background: $blue
-		color: $white 
+		color: $white
 
 .cr.button.outline.green 
 	background: none 
@@ -229,74 +230,56 @@
 .cr.button.blue
 	background: $blue 
 	color: $white
-	&:hover 
-		background: #1976D2
 	&:active
-		background: $blue
+		background: #1565C0
 
 .cr.button.deep-purple
 	background: $deep-purple
 	color: $white
-	&:hover
-		background: #512DA8
 	&:active
-		background: $deep-purple
+		background: #311B92
 
 .cr.button.gold
 	background: $gold
 	color: $white
-	&:hover
-		background: #998100
 	&:active
-		background: $gold 
+		background: $gold-deep 
 		
 .cr.button.green
 	background: $green 
 	color: $white
-	&:hover 
-		background: #388E3C
 	&:active 
-		background: $green 
+		background: #009900 
 
 .cr.button.red
 	background: $red
 	color: $white
-	&:hover
-		background: #D32F2F
 	&:active 
-		background: $red 
+		background: #B71C1C 
 
 .cr.button.orange
 	background: $orange
 	color: $white 
-	&:hover 
-		background: #E64A19
 	&:active 
-		background: $orange
+		background: #E65100
 
 .cr.button.pink
 	background: $pink
 	color: $white 
-	&:hover
-		background: #C2185B
 	&:active
-		background: $pink 
+		background: #880E4F 
 
 .cr.button.light-blue
 	background: $light-blue
 	color: $white
-	&:hover 
-		background: #0288D1  
 	&:active 
-		background: $light-blue
+		background: #01579B
 
 .cr.button.indigo
 	background: $indigo
 	color: $white 
-	&:hover 
-		background: #303F9F
 	&:active 
-		background: $indigo 
+		background: #1A237E 
 
 .cr.button.black
 	background: $black
@@ -306,20 +289,107 @@
 .cr.button.teal
 	background: $teal 
 	color: $white 
-	&:hover 
-		background: #00796B
 	&:active 
-		background: $teal 
+		background: #004D40 
 
 .cr.button.amber 
 	background: $amber
 	color: $white 
-	&:hover 
-		background: #FFA000
 	&:active 
-		background: $amber 
+		background: #FF6F00
 
-button.cr.button
-	outline: none 
-	border: none
 
+.cr.button.blue.hoverable
+	background: $blue 
+	color: $white
+	&:hover
+		background: #1565C0
+	&:active
+		background: #1565C0
+
+.cr.button.deep-purple.hoverable
+	background: $deep-purple
+	color: $white
+	&:hover
+		background: #4527A0
+	&:active
+		background: $deep-purple
+
+
+.cr.button.gold.hoverable
+	background: $gold
+	color: $white
+	&:hover 
+		background: $gold-deep
+	&:active
+		background: $gold 
+		
+
+.cr.button.green.hoverable
+	background: $green 
+	color: $white
+	&:hover
+		background: #00b300
+	&:active 
+		background: #009900 
+
+.cr.button.red.hoverable
+	background: $red
+	color: $white
+	&:hover 
+		background: #D32F2F
+	&:active 
+		background: #B71C1C 
+
+.cr.button.orange.hoverable
+	background: $orange
+	color: $white
+	&:hover 
+		background: #F57C00
+	&:active 
+		background: #E65100
+
+.cr.button.pink.hoverable
+	background: $pink
+	color: $white
+	&:hover 
+		background: #C2185B 
+	&:active
+		background: #880E4F
+
+.cr.button.light-blue.hoverable
+	background: $light-blue
+	color: $white
+	&:hover 
+		background: #0288D1
+	&:active 
+		background: #01579B
+
+.cr.button.indigo.hoverable
+	background: $indigo
+	color: $white
+	&:hover 
+		background: #303F9F 
+	&:active 
+		background: #1A237E 
+
+.cr.button.black.hoverable
+	background: $black
+	color: $white 
+
+
+.cr.button.teal.hoverable
+	background: $teal 
+	color: $white
+	&:hover 
+		background: #00796B 
+	&:active 
+		background: #004D40 
+
+.cr.button.amber.hoverable 
+	background: $amber
+	color: $white
+	&:hover 
+		background: #FFA000 
+	&:active 
+		background: #FF6F00
