--- a/Css/main.css
+++ b/Css/main.css
@@ -64,6 +64,10 @@ div.cr-inline {
       padding-bottom: 10px; } }
 
 /*-----------------------------------All  BUTTONS CODE---------------------------------------------------------- */
+button.cr.button {
+  outline: none;
+  border: none; }
+
 .cr.button {
   background: #F5F5F5;
   border-radius: 0.15rem;
@@ -83,12 +87,10 @@ div.cr-inline {
   height: 2.2rem; }
 
 .cr.button.plain {
-  border-radius: none; }
+  border-radius: 0px; }
 
 .cr.button {
   transition: all 0.3s ease 0s; }
-  .cr.button:hover {
-    background: rgba(0, 0, 0, 0.1); }
   .cr.button:active {
     background: rgba(0, 0, 0, 0.2); }
 
@@ -195,85 +197,67 @@ div.cr-inline {
 
 .cr.button.outline.gold {
   background: none;
-  border: 1px solid #e5c100;
-  color: #e5c100; }
+  border: 1px solid #bf9b30;
+  color: #bf9b30; }
   .cr.button.outline.gold:hover {
-    background: #998100;
-    border: 1px solid #998100;
+    background: #a67c00;
+    border: 1px solid #a67c00;
     color: #fff; }
 
 /*------------------------------------|COLOR VARIANTS NORMAL BUTTONS|-------------------------------------------------------- */
 .cr.button.blue {
   background: #2196F3;
   color: #fff; }
-  .cr.button.blue:hover {
-    background: #1976D2; }
   .cr.button.blue:active {
-    background: #2196F3; }
+    background: #1565C0; }
 
 .cr.button.deep-purple {
   background: #673AB7;
   color: #fff; }
-  .cr.button.deep-purple:hover {
-    background: #512DA8; }
   .cr.button.deep-purple:active {
-    background: #673AB7; }
+    background: #311B92; }
 
 .cr.button.gold {
-  background: #e5c100;
+  background: #bf9b30;
   color: #fff; }
-  .cr.button.gold:hover {
-    background: #998100; }
   .cr.button.gold:active {
-    background: #e5c100; }
+    background: #a67c00; }
 
 .cr.button.green {
   background: #00C853;
   color: #fff; }
-  .cr.button.green:hover {
-    background: #388E3C; }
   .cr.button.green:active {
-    background: #00C853; }
+    background: #009900; }
 
 .cr.button.red {
   background: #F44336;
   color: #fff; }
-  .cr.button.red:hover {
-    background: #D32F2F; }
   .cr.button.red:active {
-    background: #F44336; }
+    background: #B71C1C; }
 
 .cr.button.orange {
   background: #FF9800;
   color: #fff; }
-  .cr.button.orange:hover {
-    background: #E64A19; }
   .cr.button.orange:active {
-    background: #FF9800; }
+    background: #E65100; }
 
 .cr.button.pink {
   background: #E91E63;
   color: #fff; }
-  .cr.button.pink:hover {
-    background: #C2185B; }
   .cr.button.pink:active {
-    background: #E91E63; }
+    background: #880E4F; }
 
 .cr.button.light-blue {
   background: #03A9F4;
   color: #fff; }
-  .cr.button.light-blue:hover {
-    background: #0288D1; }
   .cr.button.light-blue:active {
-    background: #03A9F4; }
+    background: #01579B; }
 
 .cr.button.indigo {
   background: #3F51B5;
   color: #fff; }
-  .cr.button.indigo:hover {
-    background: #303F9F; }
   .cr.button.indigo:active {
-    background: #3F51B5; }
+    background: #1A237E; }
 
 .cr.button.black {
   background: #000;
@@ -282,21 +266,105 @@ div.cr-inline {
 .cr.button.teal {
   background: #009688;
   color: #fff; }
-  .cr.button.teal:hover {
-    background: #00796B; }
   .cr.button.teal:active {
-    background: #009688; }
+    background: #004D40; }
 
 .cr.button.amber {
   background: #FFC107;
   color: #fff; }
-  .cr.button.amber:hover {
-    background: #FFA000; }
   .cr.button.amber:active {
-    background: #FFC107; }
+    background: #FF6F00; }
 
-button.cr.button {
-  outline: none;
-  border: none; }
+.cr.button.blue.hoverable {
+  background: #2196F3;
+  color: #fff; }
+  .cr.button.blue.hoverable:hover {
+    background: #1565C0; }
+  .cr.button.blue.hoverable:active {
+    background: #1565C0; }
+
+.cr.button.deep-purple.hoverable {
+  background: #673AB7;
+  color: #fff; }
+  .cr.button.deep-purple.hoverable:hover {
+    background: #4527A0; }
+  .cr.button.deep-purple.hoverable:active {
+    background: #673AB7; }
+
+.cr.button.gold.hoverable {
+  background: #bf9b30;
+  color: #fff; }
+  .cr.button.gold.hoverable:hover {
+    background: #a67c00; }
+  .cr.button.gold.hoverable:active {
+    background: #bf9b30; }
+
+.cr.button.green.hoverable {
+  background: #00C853;
+  color: #fff; }
+  .cr.button.green.hoverable:hover {
+    background: #00b300; }
+  .cr.button.green.hoverable:active {
+    background: #009900; }
+
+.cr.button.red.hoverable {
+  background: #F44336;
+  color: #fff; }
+  .cr.button.red.hoverable:hover {
+    background: #D32F2F; }
+  .cr.button.red.hoverable:active {
+    background: #B71C1C; }
+
+.cr.button.orange.hoverable {
+  background: #FF9800;
+  color: #fff; }
+  .cr.button.orange.hoverable:hover {
+    background: #F57C00; }
+  .cr.button.orange.hoverable:active {
+    background: #E65100; }
+
+.cr.button.pink.hoverable {
+  background: #E91E63;
+  color: #fff; }
+  .cr.button.pink.hoverable:hover {
+    background: #C2185B; }
+  .cr.button.pink.hoverable:active {
+    background: #880E4F; }
+
+.cr.button.light-blue.hoverable {
+  background: #03A9F4;
+  color: #fff; }
+  .cr.button.light-blue.hoverable:hover {
+    background: #0288D1; }
+  .cr.button.light-blue.hoverable:active {
+    background: #01579B; }
+
+.cr.button.indigo.hoverable {
+  background: #3F51B5;
+  color: #fff; }
+  .cr.button.indigo.hoverable:hover {
+    background: #303F9F; }
+  .cr.button.indigo.hoverable:active {
+    background: #1A237E; }
+
+.cr.button.black.hoverable {
+  background: #000;
+  color: #fff; }
+
+.cr.button.teal.hoverable {
+  background: #009688;
+  color: #fff; }
+  .cr.button.teal.hoverable:hover {
+    background: #00796B; }
+  .cr.button.teal.hoverable:active {
+    background: #004D40; }
+
+.cr.button.amber.hoverable {
+  background: #FFC107;
+  color: #fff; }
+  .cr.button.amber.hoverable:hover {
+    background: #FFA000; }
+  .cr.button.amber.hoverable:active {
+    background: #FF6F00; }
 
 /*# sourceMappingURL=main.css.map */
