--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -9,6 +9,7 @@ $secondary: #1976D2
 $white: #fff
 $black: #000
 $gray: #9E9E9E
+$gray-2: #616161
 $yellow: #FFEB3B
 $blue: #2196F3
 $gold: #bf9b30
@@ -33,5 +34,10 @@ $button-small-size: 20px
 $button-medium-size: 140px
 $button-large-size: 220px
 $button-big-height: 3.0rem 
+
+
+
+//Inputs 
+
 
 
