--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -38,6 +38,11 @@ $button-big-height: 3.0rem
 
 
 //Inputs 
+// $m-input-width-default: 300px
+// $m-input-width-medium: 400px
+// $m-input-width-large: 500px
+$m-input-adaptive: 100%
+
 
 
 
