--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -4,6 +4,8 @@ $primary: #2196F3
 $accent: #E91E63
 $secondary: #1976D2
 
+$error: #B71C1C
+
 
 
 $white: #fff
@@ -42,6 +44,7 @@ $button-big-height: 3.0rem
 // $m-input-width-medium: 400px
 // $m-input-width-large: 500px
 $m-input-adaptive: 100%
+$input-border: #BDBDBD
 
 
 
