Finalizado parcialmente input basic con validaciones

--- a/Css/Sass/buttons.sass
+++ b/Css/Sass/buttons.sass
@@ -25,6 +25,10 @@ button.cr.button
 .cr.button.plain
 	border-radius: 0px
 
+
+.cr.button.rounded 
+	border-radius: $button-radius
+
 .cr.button
 	transition: background-color 0.3s
 	&:active
