--- a/Css/Sass/variables.sass
+++ b/Css/Sass/variables.sass
@@ -36,7 +36,13 @@ $button-small-size: 20px
 $button-medium-size: 140px
 $button-large-size: 220px
 $button-big-height: 3.0rem 
+$button-radius: 50px
 
+//Tooltip
+$tooltip-background: $black 
+$tooltip-text-color: $white 
+$tooltip-border-color: $white
+$box-shadow-c: $black 
 
 
 //Inputs 
