--- a/Css/Sass/inputs.sass
+++ b/Css/Sass/inputs.sass
@@ -1,14 +1,19 @@
 @import 'variables'
 
-
 div.cr.input.basic
     position: relative
     height: 32px
+    margin: 4px 2px 10px 2px
     vertical-align: middle 
     padding: 16px 0 8px 0 
     width: $m-input-adaptive
+    
     label
-        margin: 5px auto 
+        width: 100px
+        padding-top: 5px
+        position: relative
+        display: inline-block
+
     input
         position: relative
         height: 36px
@@ -17,58 +22,52 @@ div.cr.input.basic
         border: 0.5px solid $input-border
         padding: 2px 8px 2px 8px
         outline: none
-        transition: border-color 0.3s 
+        transition: border-color 0.3s, background 0.3s 
         &:focus
             border-color: $blue
 
-    input.has-text
-        border-color: $blue
-
-    input.has-error
-        border-color: $red 
+    input.error 
+        background: rgba($red, .1)
+        border-color: $red-1
+        color: $red-1
+       
 
     input.done 
-        border-color: $green
+        background: rgba($green, .2)
+        border-color: $light-green
+        color: $black
 
-// .validate .has-text
-//     border-color: $blue
-
-// .validate .has-error[data-error]
-//     border-color: $red
-//     &:after 
-//         content: 'dasd'
-//         width: 30px
-//         height: 20px
-//         position: relative 
-//         color: $red-1
+    span, input
+        &:before
+            text-align: left
+            box-sizing: content-box
+            vertical-align: baseline 
 
 
-input.done 
-    border-color: $green
+    span.cr-message.error
+        &:before
+            content: 'X'
+            position: relative
+            display: inline-block
+            font-size: 12px 
+            width: 20px
+            height: 36px
+            color: $red-1
 
 
+    span.cr-message.done
+        &:after
+            content: ''
+            display: inline-block
+            width: 4.5px
+            height: 9px
+            border: solid $green 
+            border-width: 0 2px 2px 0
+            transform: rotate(45deg)
 
-// input.cr.input.basic
-//     background: none
-//     border: 0.5px solid #BDBDBD
-//     outline: none 
-//     height: 1.5rem
-//     min-width: 150px
-//     font-size: 16px
-//     margin-left: 5px
-//     margin-top: 5px
-//     margin-bottom: 5px
-//     margin-right: 5px
-//     display: block
-//     vertical-align: baseline
-//     border-radius: 0.2rem
-//     padding-left: 0.5rem
-//     padding-right: 0.5rem
-//     padding-top: 0.5rem
-//     padding-bottom: 0.5rem
-//     &:focus
-//         transition: 0.3s all ease 0s
-//         border: 0.5px solid $blue
+
+    input.has-text
+        border-color: $blue
 
 label.basic.label
     float: left
@@ -158,7 +157,7 @@ label.basic.label
 
     transform-origin: 0 50%
 
-span.cr-state[data-error].error
+span.m-cr-state[data-error].error
     &:before
         content: attr(data-error)
         width: 30px
@@ -170,7 +169,7 @@ span.cr-state[data-error].error
         white-space: nowrap
         font-size: 12px
 
-span.cr-state[data-positive].done
+span.m-cr-state[data-positive].done
     &:before
         content: attr(data-positive)
         width: 30px
@@ -182,12 +181,12 @@ span.cr-state[data-positive].done
         white-space: nowrap
         font-size: 12px
 
-span.cr-state.error.show
+span.m-cr-state.error.show
     &:before
         display: block
         visibility: visible
 
-span.cr-state.done.show
+span.m-cr-state.done.show
     &:before
         display: block
         visibility: visible
